--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="./css/main.css">
    <script src="./main.js" defer></script>
-   <title>Portfólio - Fernanda Naser</title>
+   <title>Portfolio - Fernanda Naser</title>
 </head>
 <body>
    <header>
@@ -36,7 +36,7 @@
                </div>
                <div id="typed-strings"><p>Designer and Front End Developer.</p></div>
                <div class="intro-btns">
-                  <a href="" target="_blank" class="cv" download="Fernanda-Naser"><button class="cv-btn">Download CV</button></a>
+                  <a href="" target="_blank" class="cv" download="Fernanda-Naser.pdf"><button class="cv-btn">Download CV</button></a>
                   <a href="#sobre"><button class="contact-btn">Get in touch.</button></a>
                </div>
             </div>
