--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <h3>Linkedin</h3>
                <p>Fernanda Naser</p>
             </a>
-            <a href="www.github.com/fernandanaser" target="_blank" class="social-col">
+            <a href="https://www.github.com/fernandanaser" target="_blank" class="social-col">
                <div class="icon-img">
                   <i class='bx bxl-github'></i>
                </div>
@@ -78,7 +78,7 @@
                   <i class='bx bxl-telegram'></i>
                </div>
                <h3>Telegram</h3>
-               <p>t.me/feer_emy</p>
+               <p>feer_emy</p>
             </a>
          </div>
       </section>
