--- a/index.html
+++ b/index.html
@@ -44,13 +44,32 @@
             <img src="./assets/imgs/undraw_web_development_w2vv.svg" alt="dev-illustration">
          </div>
       </section>
-      <section class="about" id="sobre">
+
+
+ <section class="intro">
          <div class="container">
-            <h2>About me</h2>
-            <p>Hello, my name is Fernanda, I'm a designer and front-end developer. I currently focus on front-end development and am daily studying and practicing academic projects in react.js. I am available for opportunities in the following information technology areas:
-               Product. Front-end development, Technology processes, Tests, Web Design. UX / UI.</p>
-         </div>
+            <div class="group1">
+
+            </div>
+               
+            </div>
+
+            <section class="about" id="sobre">
+               <div class="container">
+                  <img src="./assets/imgs/eu2.png" alt="Fernanda Naser"><br>
+                  <div>
+                     <h2>About me</h2>
+
+                  <p>Hello, my name is Fernanda, I'm a designer and front-end developer.<br>
+                     I work with Web development, interfaces, visual identity, editorial projects, product and graphic projects, illustration and fashion.<br>
+                     I am available for opportunities in the following technology areas: Product, Front-end development, Technology processes, Tests, Web Design. UX / UI. Graphic Design.</p>
+                  </div>
+                  
+               </div>
+            </section>
       </section>
+
+
       <section class="social" id="social">
          <div class="container">
             <a href="https://www.linkedin.com/in/fernandanaser/" target="_blank" class="social-col">
@@ -154,7 +173,7 @@
       </section>
    </main>
    <footer>
-      <p>Portfolio made by <span>Fernanda Naser</span></p>
+      <p>©2022 by <span>Fernanda Naser</span></p>
    </footer>
    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
    <script src="https://unpkg.com/scrollreveal"></script>
