--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <body>
    <header>
       <div class="container">
-         <!-- <a href="./index.html"><img src="./assets/imgs/fernanda-logo.png" alt="brand"></a> -->
-         <h1 class="title">Portfolio</h1>
+         <a href="./index.html"><img src="./assets/imgs/fernanda-logo.png" alt="brand"></a>
+         <!-- <h1 class="title">Portfolio</h1> -->
 
          <nav>
             <i id="menu" class='bx bx-menu'></i>
             <ul id="nav-links">
                <li><a href="#sobre">About me</a></li>
+               <li><a href="#social">Contact</a></li>
                <li><a href="#projetos">Projects</a></li>
                <li><a href="#skills">Skills</a></li>
             </ul>
@@ -28,20 +29,21 @@
       </div>
    </header>
    <main>
+
       <section class="intro">
          <div class="container">
             <div class="group1">
-               <h1>Hi, I'm Fernanda Naser &#128075</h1>
+               <h1>Hi, I'm<br>Fernanda Naser &#128075</h1>
                <div class="type-animation">
                   <p id="typed"></p>
                </div>
                <div id="typed-strings"><p>Designer and Front End Developer.</p></div>
                <div class="intro-btns">
                   <a href="" target="_blank" class="cv" download="Fernanda-Naser.pdf"><button class="cv-btn">Download CV</button></a>
-                  <a href="#sobre"><button class="contact-btn">Get in touch.</button></a>
+                  <a href="#social"><button class="contact-btn">Get in touch.</button></a>
                </div>
             </div>
-            <img src="./assets/imgs/undraw_web_development_w2vv.svg" alt="dev-illustration">
+            <img src="./assets/imgs/undraw_proud_coder_re_exuy.svg" alt="dev-illustration">
          </div>
       </section>
 
@@ -146,6 +148,7 @@
             <div class="cards-container">
                <div class="skill-card">
                   <i class='bx bxl-html5'></i>
+                  <p>HTML5</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-css3'></i>
