--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                   <h3>Sales Dashboard</h3>
                   <p>Technologies: Java + Springboot, React js, Bootstrap, ApexCharts, PostgreSql, Heroku, Netlify.</p>
                </a>
-               <a href="https://fernandanaser.github.io/telalogin/" target="_blank" class="proj-card">
-                  <div class="card-img"><img src="./assets/imgs/telalogin.PNG" alt="screenshot"></div>
-                  <h3>Login screen</h3>
-                  <p>HTML and CSS</p>
+               <a href="https://fernandanaser.github.io/decodificador-de-texto/" target="_blank" class="proj-card">
+                  <div class="card-img"><img src="./assets/imgs/decodificador.PNG" alt="decodificador"></div>
+                  <h3>Text Decoder</h3>
+                  <p>JavaScript, HTML and CSS</p>
                </a>
                <a href="https://sweetcakeconfeitaria.fernandanaser.repl.co/" target="_blank" class="proj-card">
                   <div class="card-img"><img src="./assets/imgs/sweetcake.PNG" alt=""></div>
