--- a/index.html
+++ b/index.html
@@ -148,28 +148,35 @@
             <div class="cards-container">
                <div class="skill-card">
                   <i class='bx bxl-html5'></i>
-                  <p>HTML5</p>
+                  <p style="text-align: center;">HTML5</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-css3'></i>
+                  <p style="text-align: center;">CSS3</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-javascript'></i>
+                  <p style="text-align: center;">JavaScript</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-bootstrap'></i>
+                  <p style="text-align: center;">Bootstrap</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-sass'></i>
+                  <p style="text-align: center;">SASS</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-figma'></i>
+                  <p style="text-align: center;">Figma</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-react'></i>
+                  <p style="text-align: center;">React</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-adobe'></i>
+                  <p style="text-align: center;">Adobe Suit</p>
                </div>
             </div>
          </div>
