Add Kenzie Filmes

--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
                   <h3>Text Decoder</h3>
                   <p>JavaScript, HTML and CSS</p>
                </a>
-               <a href="https://sweetcakeconfeitaria.fernandanaser.repl.co/" target="_blank" class="proj-card">
-                  <div class="card-img"><img src="./assets/imgs/sweetcake.PNG" alt=""></div>
-                  <h3>Sweet Cake Confetaria</h3>
-                  <p>Technologies: HTML, CSS, Javascrips, JQuery and Bootstrap.</p>
+               <a href="https://fernandanaser.github.io/kenzie-filmes/" target="_blank" class="proj-card">
+                  <div class="card-img"><img src="./assets/imgs/layout.png" alt=""></div>
+                  <h3>Kenzie Filmes</h3>
+                  <p>Technologies: HTML, CSS, Javascript.</p>
                </a>
                <a href="https://aula06sitecellept27.fernandanaser.repl.co/" target="_blank" class="proj-card">
                   <div class="card-img"><img src="./assets/imgs/sitecellep.PNG" alt="screenshot"></div>
                   <h3>Site Cellep</h3>
-                  <p>Technologies: HTML, CSS, Javascrips, JQuery and Bootstrap.</p>
+                  <p>Technologies: HTML, CSS, Javascript, JQuery and Bootstrap.</p>
                </a>
                <a href="https://fernandaemy.wixsite.com/design/design-grafico" target="_blank" class="proj-card">
                   <div class="card-img"><img src="./assets/imgs/graphicdesign.PNG" alt="screenshot"></div>
