--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                   <h3>Kenzie Filmes</h3>
                   <p>Technologies: HTML, CSS, Javascript.</p>
                </a>
-               <a href="https://aula06sitecellept27.fernandanaser.repl.co/" target="_blank" class="proj-card">
-                  <div class="card-img"><img src="./assets/imgs/sitecellep.PNG" alt="screenshot"></div>
-                  <h3>Site Cellep</h3>
+               <a href="https://fernandanaser.github.io/picpro/" target="_blank" class="proj-card">
+                  <div class="card-img"><img src="./assets/imgs/picpro.png" alt="screenshot"></div>
+                  <h3>PicPro Project</h3>
                   <p>Technologies: HTML, CSS, Javascript, JQuery and Bootstrap.</p>
                </a>
                <a href="https://fernandaemy.wixsite.com/design/design-grafico" target="_blank" class="proj-card">
