--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                   <div>
                      <h2>About me</h2>
 
-                  <p>Hello, my name is Fernanda, I'm a designer and front-end developer.<br>
-                     I work with Web development, interfaces, visual identity, editorial projects, product and graphic projects, illustration and fashion.<br>
-                     I am available for opportunities in the following technology areas: Product, Front-end development, Technology processes, Tests, Web Design. UX / UI. Graphic Design.</p>
+                  <p>Hello, my name is Fernanda, I'm front-end developer.<br>
+                     I design and develop applications<br>
+                     I'm a full-time frontend developer with a passion for great design and user experiences.</p>
                   </div>
                   
                </div>
