--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <section class="projetos" id="projetos">
          <div class="container">
             <h2>Projects</h2>
+            <p>Check out a few of the main projects I have worked on.</p>
             <div class="cards-container">
                <a href="https://fernandanaser.github.io/nikkel/" target="_blank" class="proj-card">
                   <div class="card-img"><img src="./assets/imgs/nikkel-app.PNG" alt="Nikkel"></div>
