--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                   <p>Hello, my name is Fernanda, I'm front-end developer.<br>
                      I design and develop applications<br>
-                     I'm a full-time frontend developer with a passion for great design and user experiences.</p>
+                     I'm a frontend developer with an design background</p>
                   </div>
                   
                </div>
@@ -146,38 +146,39 @@
       <section class="skills" id="skills">
          <div class="container">
             <h2>Skills</h2>
+            <p>Here are a few technologies I've been working with recently:</p>
             <div class="cards-container">
                <div class="skill-card">
                   <i class='bx bxl-html5'></i>
-                  <p style="text-align: center;">HTML5</p>
+                  <p>HTML5</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-css3'></i>
-                  <p style="text-align: center;">CSS3</p>
+                  <p>CSS3</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-javascript'></i>
-                  <p style="text-align: center;">JavaScript</p>
+                  <p>JavaScript (ES6+)</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-bootstrap'></i>
-                  <p style="text-align: center;">Bootstrap</p>
+                  <p>Bootstrap</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-sass'></i>
-                  <p style="text-align: center;">SASS</p>
+                  <p>SASS</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-figma'></i>
-                  <p style="text-align: center;">Figma</p>
+                  <p>Figma</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-react'></i>
-                  <p style="text-align: center;">React</p>
+                  <p>React</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-adobe'></i>
-                  <p style="text-align: center;">Adobe Suit</p>
+                  <p>Adobe Suit</p>
                </div>
             </div>
          </div>
