--- a/index.html
+++ b/index.html
@@ -149,16 +149,24 @@
             <p>Here are a few technologies I've been working with recently:</p>
             <div class="cards-container">
                <div class="skill-card">
-                  <i class='bx bxl-html5'></i>
-                  <p>HTML5</p>
-               </div>
-               <div class="skill-card">
-                  <i class='bx bxl-css3'></i>
-                  <p>CSS3</p>
+                  <i class='bx bxl-react'></i>
+                  <p>React</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-javascript'></i>
                   <p>JavaScript (ES6+)</p>
+               </div>
+               <div class="skill-card">
+                  <i class='bx bxl-redux'></i>
+                  <p>Redux & Context</p>
+               </div>
+               <div class="skill-card">
+                  <i class='bx bxl-nodejs'></i>
+                  <p>Node.js</p>
+               </div>
+               <div class="skill-card">
+                  <i class='bx bxl-css3'></i>
+                  <p>CSS3</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-bootstrap'></i>
@@ -173,12 +181,12 @@
                   <p>Figma</p>
                </div>
                <div class="skill-card">
-                  <i class='bx bxl-react'></i>
-                  <p>React</p>
+                  <i class='bx bxl-docker'></i>
+                  <p>Docker</p>
                </div>
                <div class="skill-card">
                   <i class='bx bxl-adobe'></i>
-                  <p>Adobe Suit</p>
+                  <p>Adobe Suite</p>
                </div>
             </div>
          </div>
